--- a/.github/workflows/fossasia-deploy.yaml
+++ b/.github/workflows/fossasia-deploy.yaml
@@ -1,8 +1,10 @@
 name: FOSSASIA Continuous Deployment (CD)
 on:
   push:
-    tags:
-      - '*'
+    # tags:
+    #   - '*'
+    branches:
+      - "main"
 
 jobs:
   build:
@@ -34,11 +36,15 @@ jobs:
         run: docker build -t $SERVICE_NAME:latest .
       - name: GitHub Image Push
         run: docker push $SERVICE_NAME:latest
+      # - name: Set K8s context
+      #   uses: azure/k8s-set-context@v2
+      #   with:
+      #     method: kubeconfig
+      #     kubeconfig: ${{ secrets.KUBE_CONFIG }}
       - name: Set K8s context
-        uses: azure/k8s-set-context@v2
+        uses: ossrs/k8s-set-context-action@v1
         with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+          kubeconfig: '${{ secrets.KUBE_CONFIG }}'
       - name: Deploy to GKE
         run: | 
           kubectl apply -f ${{ env.DEPLOYMENT_MANIFEST_PATH }}
